--- a/intro.html
+++ b/intro.html
@@ -12,7 +12,7 @@
   <div class="welcome-container">
     <h1>Welcome to the Student Portal</h1>
     <p>Click the button below to access the student details search page.</p>
-    <a href="Index.html" class="start-button">Go to Search Page</a>
+    <a href="admin.html" class="start-button">Go to Search Page</a>
   </div>
 </body>
 
